2022-03-02  Alex Christensen  <achristensen@webkit.org>

        Add SPI _WKDataTask
        https://bugs.webkit.org/show_bug.cgi?id=237234

        Reviewed by Tim Horton.

        * TestWebKitAPI/Tests/WebKitCocoa/NetworkProcess.mm:
        (-[TestDataTaskDelegate dataTask:didReceiveAuthenticationChallenge:completionHandler:]):
        (-[TestDataTaskDelegate dataTask:didReceiveResponse:decisionHandler:]):
        (-[TestDataTaskDelegate dataTask:didReceiveData:]):
        (-[TestDataTaskDelegate dataTask:didCompleteWithError:]):
        (TEST):

2022-03-01  Wenson Hsieh  <wenson_hsieh@apple.com>

        Clipboard Paste dialog doesn't show on external monitors
        https://bugs.webkit.org/show_bug.cgi?id=236395
        rdar://88943577

        Reviewed by Tim Horton.

        Adjust the swizzled implementation of `-popUpContextMenu:withEvent:forView:` to additionally verify that the
        NSEvent we're presenting the menu with isn't `nil`.

        * WebKitTestRunner/mac/TestControllerMac.mm:
        (WTR::swizzledPopUpContextMenu):

2022-03-01  Fujii Hironori  <Hironori.Fujii@sony.com>

        WTF::SentinelLinkedList::iterator should have operator++ for range-for loop
        https://bugs.webkit.org/show_bug.cgi?id=237265

        Reviewed by Yusuke Suzuki.

        * TestWebKitAPI/Tests/WTF/SentinelLinkedList.cpp:
        (TestWebKitAPI::TEST):

2022-03-01  Fujii Hironori  <Hironori.Fujii@sony.com>

        [WinCairo][pywebsocket3] UnicodeDecodeError: 'charmap' codec can't decode byte 0x9d in position 640: character maps to <undefined>
        https://bugs.webkit.org/show_bug.cgi?id=237339

        Reviewed by Jonathan Bedard.

        After r290580 started to use pywebsocket3 and Python 3, Windows
        Python couldn't start WebSocket server due to UnicodeDecodeError.

        * Scripts/webkitpy/port/win.py:
        (WinPort.setup_environ_for_server): Added PYTHONUTF8 environment variable.

2022-03-01  Andres Gonzalez  <andresg_22@apple.com>
